--- a/index.html
+++ b/index.html
@@ -1,73 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Mini Task Tracker</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mini Task Tracker</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barriecito&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+AR:wght@100..400&family=Playwrite+AU+QLD+Guides&family=Playwrite+CO+Guides&family=Roboto+Slab:wght@100..900&family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1 class="apptitle" id="login-heading">Mini Task Tracker</h1>
+    <div id="auth">
+      <div class="auth-form">
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input id="email" type="email" placeholder="you@example.com" />
+        </div>
 
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input id="password" type="password" placeholder="••••••••" />
+        </div>
+      </div>
 
-<center><h1>Mini Task Tracker</h1></center>
-<div id="auth">
-  <input id="email" type="email" placeholder="Email">
-  <input id="password" type="password" placeholder="Password">
-  <br><br>
-  <button onclick="login()">Login</button>
-  <button onclick="register()">Register</button>
-  <p id="error" style="color:red;"></p>
-</div>
-<div id="task-board" style="display:none;">
-    <div class="top-bar">
-      <h2>Welcome! 🎯</h2>
-      <button class="btn btn-logout" onclick="logout()">Logout</button>
+      <div class="auth-actions">
+        <button class="btn-auth btn-primary" onclick="login()">Sign In</button>
+        <button class="btn-auth btn-secondary" onclick="register()">
+          Create Account
+        </button>
+      </div>
+      <p id="error"></p>
     </div>
-  
-    <div class="task-creator">
-      <h3>Create New Task</h3>
-      <div class="task-form">
-        <input id="task-title" placeholder="Task Title">
-        <input id="assigned-to" placeholder="Assigned To">
-        <input id="task-desc" placeholder="Task Description">
-        <input id="due-date" type="date">
-        <select id="priority">
-          <option>Low</option>
-          <option>Medium</option>
-          <option>High</option>
-        </select>
-        <button onclick="createTask()">➕ Add Task</button>
+    <div id="task-board" style="display: none">
+      <div class="top-bar">
+        <div class="header-content">
+          <h1 class="app-title">Mini Task Tracker</h1>
+          <div class="welcome-message">
+            <h2>
+              Welcome to your task Dashboard
+              <span class="target-emoji">🎯</span>
+            </h2>
+            <p class="subtitle">
+              Organize, track, and complete your tasks efficiently
+            </p>
+          </div>
+        </div>
+        <button class="btn btn-logout" onclick="logout()">
+          <svg class="logout-icon" viewBox="0 0 24 24" width="18" height="18">
+            <path
+              fill="currentColor"
+              d="M16 17v-3h-3v-2h3V9l4 4-4 4M9 5v14H5V5h4m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
+            />
+          </svg>
+          Logout
+        </button>
+      </div>
+
+      <div class="task-creator">
+        <h3>Create New Task</h3>
+        <div class="task-form">
+          <input id="task-title" placeholder="Task Title" />
+          <input id="assigned-to" placeholder="Assigned To" />
+          <input id="task-desc" placeholder="Task Description" />
+          <input id="due-date" type="date" />
+          <select id="priority">
+            <option>Low</option>
+            <option>Medium</option>
+            <option>High</option>
+          </select>
+          <button onclick="createTask()">➕ Add Task</button>
+        </div>
+      </div>
+
+      <h3 style="margin-top: 2rem">Tasks Board</h3>
+      <div class="search-container">
+        <input
+          type="text"
+          id="search"
+          placeholder="Search tasks..."
+          onkeyup="searchTasks()"
+        />
+      </div>
+      <div class="board">
+        <div class="column" id="todo">
+          <div class="column-header todo-header">To Do</div>
+        </div>
+        <div class="column" id="inprogress">
+          <div class="column-header inprogress-header">In Progress</div>
+        </div>
+        <div class="column" id="done">
+          <div class="column-header done-header">Done</div>
+        </div>
       </div>
     </div>
-  
-    <!-- <div class="search-container">
-        <input type="text" id="search" placeholder="Search tasks..." onkeyup="searchTasks()">
-    </div> -->
-    
 
-    <h3 style="margin-top:2rem;">Tasks Board</h3>
-    <div class="search-container">
-        <input type="text" id="search" placeholder="Search tasks..." onkeyup="searchTasks()">
-    </div> 
-    <div class="board">
-      <div class="column" id="todo">
-        <div class="column-header todo-header">To Do</div>
-      </div>
-      <div class="column" id="inprogress">
-        <div class="column-header inprogress-header">In Progress</div>
-      </div>
-      <div class="column" id="done">
-        <div class="column-header done-header">Done</div>
-      </div>
-    </div>
-  </div>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
-<script src="firebase-config.js"></script>
-<script src="app.js"></script>
-
-</body>
+    <script src="firebase-config.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
